--- a/src/styles/components/navigation.sass
+++ b/src/styles/components/navigation.sass
@@ -6,6 +6,8 @@
 	bottom: 50px
 	+f('Gilroy-ExtraBold', 14, 20, 100)
 	color: #a0a0a0
+	+md
+		display: none
 	
 	&__dot
 		width: 4px
@@ -38,6 +40,8 @@
 	opacity: 0.2
 	padding-left: 12px
 	+trs
+	+md
+		display: none
 	.no-touch &:hover
 		opacity: 1
 	
