--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -100,6 +100,18 @@
   fill: currentColor;
   stroke: initial;
 }
+.icon-menu-close {
+  width: 1em;
+  height: 1em;
+  fill: #FFF;
+  stroke: initial;
+}
+.icon-menu-open {
+  width: 2.43em;
+  height: 1em;
+  fill: #FFF;
+  stroke: initial;
+}
 .icon-skype {
   width: 1em;
   height: 1em;
