--- a/src/template/pages/home/screen.pug
+++ b/src/template/pages/home/screen.pug
@@ -6,7 +6,9 @@
 				+e.title НОВЫЙ ИНСТРУМЕНТ ПОСТРОЕНИЯ КОММУНИКАЦИЙ С ПОТРЕБИТЕЛЕМ
 				+e.text Разрабатываем практичные решения, которые соответствуют целям наших клиентов, развивают городскую среду и увеличивают ценность проекта.
 				+e.btn-wrap
-					+e.btn.js-chat-init Начать чат с ботом
+					-btnClass = '_default __btn js-chat-init'
+					-btnText = 'Начать чат с ботом'
+					include ../../components/btn
 
 	+e.canvas
 		+e.SVG.svg.is-hidden
