--- a/src/styles/components/header.sass
+++ b/src/styles/components/header.sass
@@ -6,6 +6,8 @@
 	z-index: 99
 	+f('MullerRegular',16,32,0)
 	color: $color6
+	+md
+		position: fixed
 	
 	&__container
 		padding-top: 24px
@@ -15,6 +17,8 @@
 	
 	&__logo
 		display: block
+		position: relative
+		z-index: 2
 		width: 136px
 		height: 32px
 		&-img
@@ -28,10 +32,33 @@
 		align-items: center
 			
 	&__nav
+		+md
+			display: flex
+			flex-direction: column
+			align-items: center
+			justify-content: center
+			position: fixed
+			z-index: 1
+			top: 0
+			left: 0
+			width: 100%
+			height: 100%
+			+f('Gilroy-ExtraBold',22,28,40)
+			text-transform: uppercase
+			background-image: linear-gradient(-144deg, $color2 0%, $color3 100%)
+			opacity: 0
+			visibility: hidden
 		ul
 			display: flex
+			+md
+				display: block
 			li
 				position: relative
+				+md
+					opacity: 0
+				&:not(:first-child)
+					+md
+						margin-top: 17px
 				&:before,
 				&:after
 					pointer-events: none
@@ -52,7 +79,6 @@
 					&:after
 						opacity: 1
 						left: calc(50% + 8px)
-				
 			a
 				position: relative
 				display: block
@@ -72,12 +98,24 @@
 					background-color: $color8
 					opacity: 0
 					+trs
+				&:after
+					+md
+						content: ''
+						position: absolute
+						right: calc(100% - 4px)
+						bottom: 7px
+						display: block
+						width: 4px
+						height: 4px
+						border-radius: 50%
+						background-color: $color4
 				.no-touch &:hover
 					&:before
 						opacity: 1
 						
 	&__chat
 		position: relative
+		z-index: 2
 		display: block
 		margin-left: 50px
 		font-size: 26px
@@ -127,6 +165,8 @@
 		margin-right: -15px
 		text-transform: uppercase
 		cursor: pointer
+		+md
+			display: none
 		> ul
 			position: relative
 			ul
@@ -169,3 +209,29 @@
 					pointer-events: auto
 					a
 						transform: translateY(0)
+						
+	&__menu-btn
+		display: none
+		position: relative
+		top: 3px
+		margin-left: 12px
+		z-index: 2
+		+md
+			display: block
+		.icon
+			+trs
+			&:first-child
+				position: relative
+				font-size: 14px
+			&:not(:first-child)
+				position: absolute
+				top: 0
+				right: 0
+				opacity: 0
+				font-size: 20px
+		&.is-active .icon
+			&:first-child
+				opacity: 0
+			&:not(:first-child)
+				opacity: 1
+				
