--- a/src/styles/pages/home/example.sass
+++ b/src/styles/pages/home/example.sass
@@ -1,7 +1,9 @@
 .example
 	position: relative
 	padding-top: 60px
-	padding-bottom: 118px
+	padding-bottom: 58px
+	+md
+		padding-bottom: calc(58px + 28px + 25px)
 	
 	&__container
 		z-index: 2
@@ -16,6 +18,8 @@
 		position: relative
 		margin: 70px auto 0
 		width: 830px
+		+md
+			width: 100%
 		.tns-nav
 			display: none
 		.tns-controls
@@ -32,10 +36,16 @@
 				position: absolute
 				z-index: 1
 				top: 180px
+				+md
+					top: calc(100% + 25px)
 			[data-controls='prev']
 				left: -99px
+				+md
+					left: -10px
 			[data-controls='next']
 				right: -101px
+				+md
+					right: -10px
 	&__slider
 		&-counter
 			position: absolute
@@ -44,6 +54,10 @@
 			display: flex
 			+f('Gilroy-ExtraBold',14,20,100)
 			color: #000000
+			+md
+				top: calc(100% + 30px)
+				left: 50%
+				transform: translateX(-50%)
 			&:before
 				content: ''
 				position: absolute
@@ -59,10 +73,14 @@
 				opacity: 0.2
 		&-chat
 			position: absolute
+			z-index: 1
 			left: 58px
 			top: 398px
 			display: flex
 			align-items: center
+			+md
+				top: 325px
+				left: 30px
 			&-text
 				+h4
 				color: $color2
@@ -85,18 +103,25 @@
 			margin-top: 54px
 			top: 0
 			left: calc(393px + 57px)
+			+md
+				left: calc(320px + 57px)
 		&-item
 			top: 0
 		&-row
 			display: flex
 			align-items: flex-start
 		&-right
-			padding: 54px 0 0 57px
+			padding: 54px 0 126px 57px
 			flex: 0 1 auto
+			+md
+				padding-top: 0
 		&-left
 			position: relative
 			flex: 1 0 393px
 			background-color: $color6
+			padding-bottom: 60px
+			+md
+				flex-basis: 320px
 			&:before
 				pointer-events: none
 				content: ''
@@ -116,13 +141,14 @@
 			p
 				&:not(:first-child)
 					margin-top: 25px
-			strong
-				+f('MullerMedium',18,24,0)
 		&-image
 			position: relative
 			width: 393px
 			height: 374px
 			+cover-img
+			+md
+				width: 320px
+				height: 305px
 			&:before
 				pointer-events: none
 				content: ''
