--- a/src/styles/pages/home/how.sass
+++ b/src/styles/pages/home/how.sass
@@ -115,6 +115,8 @@
 		position: relative
 		margin-top: 70px
 		padding: 0 70px
+		+md
+			padding: 0
 		
 		&-start
 			position: absolute
@@ -125,6 +127,8 @@
 			border-radius: 50%
 			background-color: $color4
 			transform: scale(0)
+			+md
+				transform: none
 		&-line
 			position: absolute
 			top: 0
@@ -171,6 +175,9 @@
 		&-el_1 &-content
 			top: 237px
 			left: 124px
+			+md
+				top: 220px
+				left: 64px
 		&-el_1 &-number
 			top: 20px
 			left: -1px
@@ -179,12 +186,25 @@
 			left: -30px
 			width: calc(454px + 100px)
 			height: calc(339px + 100px)
+			+md
+				top: 150px
+				left: 0
+				width: 272px
+				height: 203px
+				background: transparent url('../img/how-cloud-1.png') center center no-repeat
+				background-size: cover
+				transform: scale(1.3)
+				transform-origin: left top
 			
 		&-el_2
 			height: 300px
 		&-el_2 &-content
 			top: 76px
 			left: calc(50% + 157px)
+			+md
+				top: 86px
+				left: auto
+				right: 25px
 		&-el_2 &-number
 			top: -154px
 			right: -3px
@@ -193,12 +213,23 @@
 			right: -5px
 			width: calc(398px + 100px)
 			height: calc(376px + 100px)
+			+md
+				top: 10px
+				right: 0
+				width: 259px
+				height: 244px
+				background: transparent url('../img/how-cloud-2.png') center center no-repeat
+				background-size: cover
+				transform: scale(1.3)
+				transform-origin: right top
 			
 		&-el_3
 			height: 280px
 		&-el_3 &-content
 			top: 68px
 			left: 149px
+			+md
+				left: 40px
 		&-el_3 &-number
 			top: -140px
 			left: -1px
@@ -207,12 +238,25 @@
 			left: -3px
 			width: calc(432px + 100px)
 			height: calc(368px + 100px)
+			+md
+				top: 10px
+				left: 0
+				width: 258px
+				height: 214px
+				background: transparent url('../img/how-cloud-3.png') center center no-repeat
+				background-size: cover
+				transform: scale(1.3)
+				transform-origin: left top
 			
 		&-el_4
 			height: 320px
 		&-el_4 &-content
 			top: 80px
 			left: calc(50% + 172px)
+			+md
+				top: 85px
+				left: auto
+				right: 20px
 		&-el_4 &-number
 			top: -155px
 			right: -3px
@@ -221,12 +265,24 @@
 			right: -15px
 			width: calc(403px + 100px)
 			height: calc(328px + 100px)
+			+md
+				top: 10px
+				right: 0
+				width: 257px
+				height: 209px
+				background: transparent url('../img/how-cloud-4.png') center center no-repeat
+				background-size: cover
+				transform: scale(1.3)
+				transform-origin: right top
 			
 		&-el_5
 			height: 350px
 		&-el_5 &-content
 			top: 118px
 			left: 172px
+			+md
+				top: 90px
+				left: 45px
 		&-el_5 &-number
 			top: -130px
 			left: -1px
@@ -235,12 +291,25 @@
 			left: 33px
 			width: calc(418px + 100px)
 			height: calc(387px + 100px)
+			+md
+				top: 10px
+				left: 0
+				width: 260px
+				height: 241px
+				background: transparent url('../img/how-cloud-5.png') center center no-repeat
+				background-size: cover
+				transform: scale(1.3)
+				transform-origin: left top
 			
 		&-el_6
 			height: 390px
 		&-el_6 &-content
 			top: 154px
 			left: calc(50% + 107px)
+			+md
+				top: 90px
+				left: auto
+				right: 30px
 		&-el_6 &-number
 			top: -95px
 			right: -3px
@@ -249,3 +318,12 @@
 			right: 32px
 			width: calc(440px + 100px)
 			height: calc(359px + 100px)
+			+md
+				top: 10px
+				right: 0
+				width: 264px
+				height: 215px
+				background: transparent url('../img/how-cloud-6.png') center center no-repeat
+				background-size: cover
+				transform: scale(1.3)
+				transform-origin: right top
