--- a/src/styles/partials/_helpers.sass
+++ b/src/styles/partials/_helpers.sass
@@ -63,18 +63,27 @@
 =h1
 	+f('Gilroy-ExtraBold',44,56,20)
 	text-transform: uppercase
-	+md
-		font-size: 33px
-		line-height: 42px
+	+sm
+		font-size: 22px
+		line-height: 28px
+		letter-spacing: 0.04em
 	
 =h2
 	+f('Gilroy-Bold',35,36,0)
+	+sm
+		font-size: 26px
+		line-height: 27px
 	
 =h3
 	+f('Gilroy-Bold',26,30,0)
+	+sm
+		font-size: 20px
+		line-height: 24px
 	
 =h4
 	+f('Gilroy-Bold',20,30,0)
+	+sm
+		font-size: 16px
 
 =paragraph-text
 	+f('MullerRegular',18,24,0)
@@ -83,6 +92,10 @@
 		line-height: 20px
 	strong
 		+f('MullerMedium',18,24,0)
+		+sm
+			font-size: 14px
+			color: $color4
+			line-height: 20px
 	
 
 /* ===================================
