--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -112,6 +112,12 @@
   fill: #FFF;
   stroke: initial;
 }
+.icon-mobile-top {
+  width: 0.26em;
+  height: 1em;
+  fill: #1212B9;
+  stroke: initial;
+}
 .icon-skype {
   width: 1em;
   height: 1em;
