--- a/src/template/components/footer.pug
+++ b/src/template/components/footer.pug
@@ -1,6 +1,9 @@
 +b.FOOTER.footer#footer(data-scroll-section)
 	div(data-line)
 
+	+e.mobile-top.js-to-top
+		+i('mobile-top')
+
 	+e.round-top
 		.
 			<svg viewBox="0 0 1282 81">
