--- a/src/template/pages/home/advantage.pug
+++ b/src/template/pages/home/advantage.pug
@@ -22,6 +22,9 @@
 			'Искусственный интеллект',
 			'Разумное поведение бота, почти как человек.'
 			]]
+		+e.list-counter
+			+e.list-counter-current
+			+e.list-counter-total
 		+e.list
 			each el, index in advList
 				+e.list-item
