--- a/src/template/pages/home/how.pug
+++ b/src/template/pages/home/how.pug
@@ -44,6 +44,8 @@
 					p Текст бота №2 еще разок
 				div(data-bot='last')
 					p Ну что ты начинаешь, оставь свой e-mail. Я еду с вином.
+				div(data-bot='submit')
+					p Спасибо, заявка принята на указанную почту:
 			+e.data-btn
 				div(data-btn='0')
 					p(data-btn-event-target='1') Лучше не бывает!
