--- a/src/styles/components/header.sass
+++ b/src/styles/components/header.sass
@@ -7,13 +7,22 @@
 	+f('MullerRegular',16,32,0)
 	color: $color6
 	+md
+		position: absolute
+	&.is-fixed
 		position: fixed
+		background-image: linear-gradient(-99deg, $color2 0%, $color3 100%)
 	
 	&__container
 		padding-top: 24px
 		display: flex
 		justify-content: space-between
 		align-items: center
+		+md
+			padding-top: 16px
+			padding-bottom: 11px
+		+sm
+			padding-top: 18px
+			padding-bottom: 12px
 	
 	&__logo
 		display: block
@@ -21,6 +30,9 @@
 		z-index: 2
 		width: 136px
 		height: 32px
+		+sm
+			width: 124px
+			height: 29px
 		&-img
 			width: 100%
 			height: 100%
@@ -30,6 +42,10 @@
 		top: 4px
 		display: flex
 		align-items: center
+		+md
+			top: 0
+		+sm
+			top: 4px
 			
 	&__nav
 		+md
@@ -42,16 +58,23 @@
 			top: 0
 			left: 0
 			width: 100%
-			height: 100%
+			height: 100vh
 			+f('Gilroy-ExtraBold',22,28,40)
 			text-transform: uppercase
 			background-image: linear-gradient(-144deg, $color2 0%, $color3 100%)
 			opacity: 0
 			visibility: hidden
+		+sm
+			justify-content: flex-start
+			padding-top: 60px
 		ul
 			display: flex
 			+md
 				display: block
+				margin-left: 20px
+				padding: 20px
+				+md
+					overflow: auto
 			li
 				position: relative
 				+md
@@ -119,6 +142,8 @@
 		display: block
 		margin-left: 50px
 		font-size: 26px
+		+md
+			display: none
 		&:before,
 		&:after
 			pointer-events: none
@@ -161,12 +186,14 @@
 			display: block
 			
 	&__lang
+		position: relative
+		z-index: 2
 		margin-left: 15px
 		margin-right: -15px
 		text-transform: uppercase
 		cursor: pointer
-		+md
-			display: none
+		+sm
+			margin-top: -18px
 		> ul
 			position: relative
 			ul
@@ -209,19 +236,33 @@
 					pointer-events: auto
 					a
 						transform: translateY(0)
+		&.is-active > ul > li > a
+			&:before
+				top: calc(100% + 2px)
+				opacity: 1
+		&.is-active > ul
+			ul
+				opacity: 1
+				pointer-events: auto
+				a
+					transform: translateY(0)
 						
 	&__menu-btn
 		display: none
 		position: relative
-		top: 3px
-		margin-left: 12px
+		margin-left: 15px
+		top: 7px
 		z-index: 2
 		+md
 			display: block
+		+sm
+			top: 0
+			margin-top: -4px
 		.icon
 			+trs
 			&:first-child
 				position: relative
+				top: 1px
 				font-size: 14px
 			&:not(:first-child)
 				position: absolute
@@ -234,4 +275,7 @@
 				opacity: 0
 			&:not(:first-child)
 				opacity: 1
+				
+	&__mobile-chat-btn
+		display: none
 				
