--- a/src/styles/components/preloader.sass
+++ b/src/styles/components/preloader.sass
@@ -24,6 +24,8 @@
 		z-index: 1
 		background-image: linear-gradient(-45deg, $color4 0%, #1e14a8 100%)
 		clip-path: ellipse(85% 100% at 25% -100%)
+		+md
+			clip-path: none
 		&:before
 			content: ''
 			+ratio-in
