--- a/src/styles/pages/home/how.sass
+++ b/src/styles/pages/home/how.sass
@@ -2,6 +2,8 @@
 	position: relative
 	padding: 100px 0
 	color: $color6
+	+sm
+		padding: 71px 0 70px
 	
 	[data-line]
 		z-index: 4
@@ -24,16 +26,20 @@
 			&:nth-child(1)
 				z-index: 0
 				background-image: linear-gradient(-18deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
+				+sm
+					background-image: linear-gradient(-54deg, $color2 0%, #50218e 100%)
 			&:nth-child(2)
 				z-index: -1
 				margin-top: -50px
 				height: calc(33.333% + 50px)
 				background-image: linear-gradient(-165deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
+				+sm
+					background-image: linear-gradient(-165deg, $color2 0%, #50218e 56%, #50218e 100%)
 			&:nth-child(3)
 				z-index: 1
 				margin-top: -200px
 				height: calc(33.333% + 200px)
-				background-image: linear-gradient(-30deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
+				background-image: linear-gradient(-30deg, $color2 0%, #50218e 56%, #50218e 100%)
 	
 	&__round-bottom
 		position: absolute
@@ -54,11 +60,23 @@
 		max-width: 790px
 		+h2
 		text-align: center
+		+sm
+			margin: 0
+			text-align: left
+			max-width: 240px
+		+mob-fix
+			max-width: n!important
 		
 	&__text
 		margin: 43px auto 0
 		max-width: 790px
 		text-align: center
+		+sm
+			margin: 19px 0 0
+			text-align: left
+			max-width: 240px
+		+mob-fix
+			max-width: none!important
 		
 	&__soc
 		position: relative
@@ -67,9 +85,15 @@
 		justify-content: center
 		align-items: center
 		pointer-events: none
+		+sm
+			margin-top: 24px
+			max-width: 260px
+			justify-content: space-between
 		&-icon-wrap
 			position: relative
 			margin: 0 14px
+			+sm
+				margin: 0
 			&:before,
 			&:after
 				pointer-events: none
@@ -129,6 +153,9 @@
 			transform: scale(0)
 			+md
 				transform: none
+			+sm
+				width: 10px
+				height: 10px
 		&-line
 			position: absolute
 			top: 0
@@ -136,24 +163,41 @@
 			right: 0
 			display: flex
 			justify-content: center
+			+sm
+				bottom: 50px
+			&:before
+				+sm
+					content: ''
+					position: absolute
+					top: 0
+					bottom: 0
+					left: calc(50% - 1px)
+					width: 2px
+					background-color: $color4
 			svg
 				width: 604px
 				height: 1923px
 				stroke: $color4
 				stroke-width: 4px
 				fill: none
+				+sm
+					display: none
 		
 		&-number
 			position: absolute
 			z-index: 1
 			font-size: 184px
 			color: $color5
+			+sm
+				display: none
 			.icon
 				display: block
 		&-title
 			+h3
 		&-text
 			margin-top: 14px
+			+sm
+				margin-top: 9px
 		
 		&-el
 			position: relative
@@ -169,15 +213,22 @@
 			position: absolute
 			z-index: 3
 			max-width: 260px
+			+sm
+				max-width: 200px
 			
 		&-el_1
 			height: 400px
+			+sm
+				height: 320px
 		&-el_1 &-content
 			top: 237px
 			left: 124px
 			+md
 				top: 220px
 				left: 64px
+			+sm
+				top: 132px
+				left: calc(50% - 94px)
 		&-el_1 &-number
 			top: 20px
 			left: -1px
@@ -195,9 +246,15 @@
 				background-size: cover
 				transform: scale(1.3)
 				transform-origin: left top
+			+sm
+				top: 71px
+				left: 50%
+				transform: translateX(-50%)
 			
 		&-el_2
 			height: 300px
+			+sm
+				height: 295px
 		&-el_2 &-content
 			top: 76px
 			left: calc(50% + 157px)
@@ -205,6 +262,10 @@
 				top: 86px
 				left: auto
 				right: 25px
+			+sm
+				top: 63px
+				left: calc(50% - 94px)
+				right: auto
 		&-el_2 &-number
 			top: -154px
 			right: -3px
@@ -222,14 +283,23 @@
 				background-size: cover
 				transform: scale(1.3)
 				transform-origin: right top
+			+sm
+				top: 0
+				left: 50%
+				transform: translateX(-50%)
 			
 		&-el_3
 			height: 280px
+			+sm
+				height: 270px
 		&-el_3 &-content
 			top: 68px
 			left: 149px
 			+md
 				left: 40px
+			+sm
+				top: 45px
+				left: calc(50% - 94px)
 		&-el_3 &-number
 			top: -140px
 			left: -1px
@@ -247,9 +317,15 @@
 				background-size: cover
 				transform: scale(1.3)
 				transform-origin: left top
+			+sm
+				top: 0
+				left: 50%
+				transform: translateX(-50%)
 			
 		&-el_4
 			height: 320px
+			+sm
+				height: 257px
 		&-el_4 &-content
 			top: 80px
 			left: calc(50% + 172px)
@@ -257,6 +333,10 @@
 				top: 85px
 				left: auto
 				right: 20px
+			+sm
+				top: 62px
+				left: calc(50% - 94px)
+				right: auto
 		&-el_4 &-number
 			top: -155px
 			right: -3px
@@ -274,15 +354,24 @@
 				background-size: cover
 				transform: scale(1.3)
 				transform-origin: right top
+			+sm
+				top: 0
+				left: 50%
+				transform: translateX(-50%)
 			
 		&-el_5
 			height: 350px
+			+sm
+				height: 290px
 		&-el_5 &-content
 			top: 118px
 			left: 172px
 			+md
 				top: 90px
 				left: 45px
+			+sm
+				top: 59px
+				left: calc(50% - 94px)
 		&-el_5 &-number
 			top: -130px
 			left: -1px
@@ -300,9 +389,15 @@
 				background-size: cover
 				transform: scale(1.3)
 				transform-origin: left top
+			+sm
+				top: 0
+				left: 50%
+				transform: translateX(-50%)
 			
 		&-el_6
 			height: 390px
+			+sm
+				height: 215px
 		&-el_6 &-content
 			top: 154px
 			left: calc(50% + 107px)
@@ -310,6 +405,10 @@
 				top: 90px
 				left: auto
 				right: 30px
+			+sm
+				top: 57px
+				left: calc(50% - 94px)
+				right: auto
 		&-el_6 &-number
 			top: -95px
 			right: -3px
@@ -327,3 +426,7 @@
 				background-size: cover
 				transform: scale(1.3)
 				transform-origin: right top
+			+sm
+				top: 0
+				left: 50%
+				transform: translateX(-50%)
