--- a/src/template/pages/home/example.pug
+++ b/src/template/pages/home/example.pug
@@ -12,7 +12,7 @@
 				-btnText = 'Заказать себе бот'
 				include ../../components/btn
 			+e.slider-chat
-				+e.slider-chat-text(href='#!') Поговорить с ботом
+				+e.slider-chat-text(href='#!' data-text-mobile='Поговорить с этим ботом') Поговорить с ботом
 				+e.slider-chat-icon(href='#!')
 					+i('telegram')
 				+e.slider-chat-icon(href='#!')
@@ -23,9 +23,9 @@
 						+e.slider-left
 							+e.slider-image
 								+e.IMG.slider-img(src='static/img/content/loc-slider-1.jpg' alt='image')
-								+e.SVG.slider-image-svg(viewBox='0 0 393.2 373.7' preserveAspectRatio='none')
-									path(d="M393.2,179.6v5.2C393.2,183.1,393.2,181.3,393.2,179.6z")
-									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393.2V184.8C392.7,247.9,374.3,310.7,333.6,340z")
+								+e.SVG.slider-image-svg(viewBox='0 0 393 373.7' preserveAspectRatio='none')
+									path(d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z")
+									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z")
 						+e.slider-right
 							+e.slider-title Киевский зоопарк
 							+e.slider-text
@@ -37,9 +37,9 @@
 						+e.slider-left
 							+e.slider-image
 								+e.IMG.slider-img(src='static/img/content/loc-slider-2.jpg' alt='image')
-								+e.SVG.slider-image-svg(viewBox='0 0 393.2 373.7' preserveAspectRatio='none')
-									path(d="M393.2,179.6v5.2C393.2,183.1,393.2,181.3,393.2,179.6z")
-									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393.2V184.8C392.7,247.9,374.3,310.7,333.6,340z")
+								+e.SVG.slider-image-svg(viewBox='0 0 393 373.7' preserveAspectRatio='none')
+									path(d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z")
+									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z")
 						+e.slider-right
 							+e.slider-title Новостные агенства и популярные агенства
 							+e.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов.
@@ -49,9 +49,9 @@
 						+e.slider-left
 							+e.slider-image
 								+e.IMG.slider-img(src='static/img/content/loc-slider-3.jpg' alt='image')
-								+e.SVG.slider-image-svg(viewBox='0 0 393.2 373.7' preserveAspectRatio='none')
-									path(d="M393.2,179.6v5.2C393.2,183.1,393.2,181.3,393.2,179.6z")
-									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393.2V184.8C392.7,247.9,374.3,310.7,333.6,340z")
+								+e.SVG.slider-image-svg(viewBox='0 0 393 373.7' preserveAspectRatio='none')
+									path(d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z")
+									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z")
 						+e.slider-right
 							+e.slider-title Новостные агенства будущего
 							+e.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.
