--- a/src/styles/components/scrollbar.sass
+++ b/src/styles/components/scrollbar.sass
@@ -3,6 +3,8 @@
 	background-color: rgba($color6, .5) !important
 	opacity: 1 !important
 	border-radius: 2px !important
+	+sm
+		width: 6px !important
 .ps__thumb-y
 	right: 0 !important
 	width: 100% !important
