--- a/src/styles/components/header.sass
+++ b/src/styles/components/header.sass
@@ -68,6 +68,7 @@
 		+sm
 			justify-content: flex-start
 			padding-top: 60px
+			+gpu
 		ul
 			display: flex
 			+md
@@ -205,6 +206,8 @@
 				+trs
 				a
 					transform: translateY(-10px)
+					+md
+						color: #a0a0a0
 			a
 				display: block
 				position: relative
