--- a/src/styles/components/scrollbar.sass
+++ b/src/styles/components/scrollbar.sass
@@ -5,10 +5,13 @@
 	border-radius: 2px !important
 	+sm
 		width: 6px !important
+		transition: none !important
 .ps__thumb-y
 	right: 0 !important
 	width: 100% !important
 	background-color: rgba($color6, .5) !important
 	opacity: 1 !important
 	border-radius: 2px !important
+	+sm
+		transition: none !important
 	
