--- a/src/template/components/footer.pug
+++ b/src/template/components/footer.pug
@@ -7,8 +7,8 @@
 	+e.round-top
 		.
 			<svg viewBox="0 0 1282 81">
-			<path d="M0,80.5h641.4C320.9,80.5,0,0.5,0,0.5V80.5z"/>
-			<path d="M1281,0.5c0,0-319.6,80-639.6,80H1282v-80H1281z"/>
+			<path d="M0,81h641.4C320.9,81,0,0,0,0V81z"/>
+			<path d="M1282,0c0,0-319.6,81-639.6,81H1282v-81H1282z"/>
 			</svg>
 
 	+e.container.container
@@ -40,6 +40,7 @@
 						+e.list-soc-icon-wrap
 							-socIconClass = '_default __list-soc-icon'
 							-socIcon = el
+							-socHref = true
 							include soc-icon
 
 		+e.bot
