--- a/src/template/components/header.pug
+++ b/src/template/components/header.pug
@@ -1,6 +1,6 @@
 +b.HEADER.header
 	+e.container.container
-		+e.logo(href='#!')
+		+e.logo(href='home.html')
 			+e.logo-img(src='static/img/logo.svg' alt='image')
 		+e.right
 			+e.NAV.nav
