--- a/src/template/pages/home/top.pug
+++ b/src/template/pages/home/top.pug
@@ -23,7 +23,7 @@
 						+e.DIV.image
 							+e.IMG.image-img(src=`static/img/content/loc-slider-${index + 1}.jpg` alt='image')
 							+e.SVG.image-svg(viewBox="0 0 300 219" preserveAspectRatio='none')
-								path(d='M0,0v219h300V0H0z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z')
+								path(d='M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z')
 						+e.DIV.title= el[0]
 						+e.DIV.text= el[1]
 						+e.DIV.more
