--- a/src/styles/components/card.sass
+++ b/src/styles/components/card.sass
@@ -11,6 +11,8 @@
 		height: 219px
 		overflow: hidden
 		+cover-img
+		img
+			position: relative
 		+sm
 			width: 280px
 			height: 203px
@@ -29,10 +31,11 @@
 			z-index: 2
 		&-svg
 			+ratio-in
-			overflow: hidden
-			+gpu
+			width: 100%
+			height: 100%
 			z-index: 4
 			fill: $color6
+			overflow: hidden
 			
 	&__title
 		margin-top: 38px
