--- a/src/styles/pages/home/chat.sass
+++ b/src/styles/pages/home/chat.sass
@@ -11,11 +11,13 @@
 		+sm
 			max-width: 420px
 			padding-left: 50px
+			+gpu
 		
 	&__content
 		position: relative
 		opacity: 0
 		visibility: hidden
+		+gpu
 		
 	&__icon-bot
 		position: absolute
@@ -206,6 +208,7 @@
 			align-items: flex-start
 			width: 100%
 			height: 410px
+			+gpu
 			+sm
 				height: 320px
 			&-bot
