--- a/src/styles/pages/home/how.sass
+++ b/src/styles/pages/home/how.sass
@@ -19,6 +19,7 @@
 		width: 100%
 		height: 100%
 		z-index: 0
+		overflow: hidden
 		+gpu
 		&-el
 			position: relative
@@ -42,15 +43,18 @@
 				background-image: linear-gradient(-30deg, $color2 0%, #50218e 56%, #50218e 100%)
 	
 	&__round-bottom
+		+ratio(1282,81)
 		position: absolute
 		z-index: 1
-		bottom: -1px
+		bottom: 0
 		left: 0
 		right: 0
 		svg
 			display: block
 			width: 100% !important
+			transform: scaleX(1.01)
 			fill: $color6
+			+ratio-in
 	
 	&__container
 		z-index: 2
