--- a/src/styles/components/header.sass
+++ b/src/styles/components/header.sass
@@ -193,6 +193,7 @@
 		text-transform: uppercase
 		cursor: pointer
 		+sm
+			+f('MullerMedium',14,32,0)
 			margin-top: -18px
 		> ul
 			position: relative
