--- a/src/template/extend/default.pug
+++ b/src/template/extend/default.pug
@@ -45,6 +45,8 @@ html(lang='ru')
 			// Footer
 			include ../components/footer
 
+			block modals
+
 			// Scripts
 			block scripts
 				script(src='static/js/index' + suffix + '.js')
