--- a/src/template/pages/home/loc.pug
+++ b/src/template/pages/home/loc.pug
@@ -8,8 +8,12 @@
 				+e.slider-counter-current
 				+e.slider-counter-total
 			+e.slider-btn
-				-btnClass = '_default'
+				-btnClass = '_default js-modal'
 				-btnText = 'Заказать себе бот'
+				-
+					attributes = {
+						'data-target': '#orderBot'
+					}
 				include ../../components/btn
 			+e.slider
 				+e.slider-item
@@ -44,3 +48,6 @@
 								+e.IMG.slider-img(src='static/img/content/loc-slider-3.jpg' alt='image')
 								+e.SVG.slider-image-svg(viewBox='0 0 498 434' preserveAspectRatio='none')
 									path(d='M0,0v434h498V0H0z M274,433.1C151.8,442.1,63,386.2,28,330.8C-23.5,249,9.6,91.5,21,69.1S69.8-18.4,154.1,5c84.7,23.5,48.6,11.8,182.8,4.1s153.5,109.5,153.5,109.5C520.4,304.1,464.2,419,274,433.1z')
+
+
+
